Almost finished implementation of point-wise matching algorithm on CPU (verified to work, preliminarily)

--- a/MapMatcher/MapMatcher.vcxproj.filters
+++ b/MapMatcher/MapMatcher.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClInclude Include="ProbeLinkMatcher.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MapMatcherCommonHeader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Partition6467LinkData.csv" />
