--- a/MapMatcher/MapMatcher.vcxproj
+++ b/MapMatcher/MapMatcher.vcxproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CSVReader.h" />
+    <ClInclude Include="MapMatcherCommonHeader.h" />
     <ClInclude Include="ProbeLinkMatcher.h" />
   </ItemGroup>
   <ItemGroup>
