Implemented Batched Probe-point processing. File write implementation pending.

--- a/MapMatcher/MapMatcher.vcxproj
+++ b/MapMatcher/MapMatcher.vcxproj
@@ -149,12 +149,14 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CSVWriter.cpp" />
     <ClCompile Include="MapMatcher.cpp" />
     <ClCompile Include="CSVReader.cpp" />
     <ClCompile Include="ProbeLinkMatcher.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CSVReader.h" />
+    <ClInclude Include="CSVWriter.h" />
     <ClInclude Include="MapMatcherCommonHeader.h" />
     <ClInclude Include="ProbeLinkMatcher.h" />
   </ItemGroup>
