--- a/MapMatcher/MapMatcher.vcxproj.filters
+++ b/MapMatcher/MapMatcher.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="ProbeLinkMatcher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CSVWriter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CSVReader.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MapMatcherCommonHeader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CSVWriter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
