--- a/MapMatcher/MapMatcher.vcxproj.filters
+++ b/MapMatcher/MapMatcher.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="CSVWriter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LinkSlopeFromProbesFinder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CSVReader.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CSVWriter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkSlopeFromProbesFinder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
